--- a/public/ce/section_input_ce.html
+++ b/public/ce/section_input_ce.html
@@ -134,6 +134,9 @@
 
 	window.customElements.define('section-input-ce', SectionInputCE);
 
+	console.log('window.customElements');
+	console.log(window);
+
 })(window, document);
 </script>
 
